--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: true
 dist: trusty
 language: python
 python:
@@ -8,6 +8,7 @@ env:
 - TOX_ENV=安裝
 - TOX_ENV=flake8
 install:
+- sudo apt-get install normalize-audio
 - pip install tox
 branches:
   only:
