--- a/tox.ini
+++ b/tox.ini
@@ -6,4 +6,4 @@ commands =
 deps =
     flake8
 commands =
-	flake8 語料庫 --count --show-source --exclude migrations
+	flake8 語料庫 --count --show-source
