--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
-[testenv:安裝]
+[testenv:test]
 commands =
-    python manage.py migrate
+    python manage.py test
 
 [testenv:flake8]
 deps =
     flake8
 commands =
-	flake8 語料庫 --count --show-source
+	flake8 語料庫 試驗 --count --show-source
