--- a/tox.ini
+++ b/tox.ini
@@ -6,5 +6,5 @@ commands =
 deps =
     flake8
 commands =
-	flake8 語料庫 試驗 --exclude=migrations --count --show-source
+	flake8 語料庫 校對工具 試驗 --exclude=migrations --count --show-source
 	flake8 語料庫/migrations --max-line-length=159 --count --show-source
