--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [testenv:test]
 commands =
-    python manage.py test
+    coverage run --source=語料庫,校對工具,口語辭典,語言模型 manage.py test
 
 [testenv:flake8]
 deps =
     flake8
 commands =
-	flake8 語料庫 校對工具 試驗 --exclude=migrations --count --show-source
+	flake8 語料庫 校對工具 口語辭典 語言模型 試驗 --exclude=migrations --count --show-source
 	flake8 語料庫/migrations --max-line-length=159 --count --show-source
