--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ addons:
       - csh
 install:
 - sudo apt-get install normalize-audio
-- pip install tox
+- pip install tox python-coveralls
 branches:
   only:
   - master
