CI detects model changes w/o migrations

--- a/tox.ini
+++ b/tox.ini
@@ -10,3 +10,8 @@ deps =
 commands =
 	flake8 語料庫 校對工具 口語辭典 語言模型 試驗 --exclude=migrations --count --show-source
 	flake8 語料庫/migrations --max-line-length=159 --count --show-source
+
+[testenv:check_migration]
+commands =
+    python manage.py makemigrations --check --dry-run
+
