--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ addons:
 install:
 - sudo apt-get install normalize-audio
 - pip install tox python-coveralls
+- pip install https://github.com/a8568730/django/archive/url_prefix_unicode.zip
 branches:
   only:
   - master
