--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,14 @@
-[testenv:test]
+[testenv:單元]
 deps =
     coverage
 commands =
-    coverage run --source=語料庫,校對工具,口語辭典,語言模型 manage.py test
+    coverage run --source=語料庫,校對工具,口語辭典,語言模型 manage.py test -p '*單元試驗.py'
+
+[testenv:整合]
+deps =
+    coverage
+commands =
+    coverage run --source=用字 manage.py test -p '*整合試驗.py'
 
 [testenv:flake8]
 deps =
