coverage佮flake8愛算檢查工具

--- a/tox.ini
+++ b/tox.ini
@@ -2,19 +2,19 @@
 deps =
     coverage
 commands =
-    coverage run --source=語料庫,校對工具,本調辭典,口語辭典,語言模型 manage.py test -p '*單元試驗.py'
+    coverage run --source=語料庫,校對工具,本調辭典,口語辭典,語言模型,檢查工具 manage.py test -p '*單元試驗.py'
 
 [testenv:整合]
 deps =
     coverage
 commands =
-    coverage run --source=語料庫,校對工具,本調辭典,口語辭典,語言模型 manage.py test -p '*整合試驗.py'
+    coverage run --source=語料庫,校對工具,本調辭典,口語辭典,語言模型,檢查工具 manage.py test -p '*整合試驗.py'
 
 [testenv:flake8]
 deps =
     flake8
 commands =
-	flake8 語料庫 校對工具 口語辭典 語言模型 試驗 --exclude=migrations --count --show-source
+	flake8 語料庫 校對工具 口語辭典 語言模型 試驗 檢查工具 --exclude=migrations --count --show-source
 	flake8 語料庫/migrations --max-line-length=159 --count --show-source
 
 [testenv:check_migration]
