修TextGrid的口語調斷詞

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,12 @@ deps =
 commands =
     coverage run --source=語料庫,用字規範,校對工具,本調辭典,口語辭典,語言模型,檢查工具 manage.py test -p '*整合試驗.py'
 
+[testenv:匯入]
+deps =
+    coverage
+commands =
+    coverage run --source=語料庫,用字規範,校對工具,本調辭典,口語辭典,語言模型,檢查工具 manage.py test -p '*匯入試驗.py'
+
 [testenv:flake8]
 deps =
     flake8
