--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-Taiwanese-Speech-And-Text-Corpus>=0.3.0
-kau3-tian2_iong7-ji7>=0.1.2
-praatIO
-Pyro4
-gunicorn
-whitenoise
+Django==2.1
+gunicorn==19.7.1
+htsengine==0.2.4
+kau3-tian2-iong7-ji7==0.1.3
+pkg-resources==0.0.0
+praatio==3.6.8
+pypi-bleualign==0.1.1.1
+pypi-kenlm==0.1.20160618
+Pyro4==4.63
+pytz==2017.2
+serpent==1.23
+tai5-uan5-gian5-gi2-kang1-ku7==0.6.32
+Taiwanese-Speech-And-Text-Corpus==0.3.0
+whitenoise==3.3.1
